# Haskell-Lisp

./: .gitignore  LICENSE  README.md  cabal.sandbox.config  haskell.cabal  main
lib/: stdlib.scm
src/: Errors.hs  Evaluator.hs  Main.hs  Parser.hs  Primitives.hs
src/Utilities/: Number.hs  Tools.hs  Types.hs
