cabal-version: >=1.10
name: haskell
version: 0.1.0.0
license: MIT
license-file: LICENSE
maintainer: jordan@osborn.dev
author: Jordan Osborn
build-type: Simple
extra-source-files:
    ChangeLog.md

executable haskell
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules:
        Utilities.Number
        Utilities.Types
        Utilities.Tools
        Parser
        Evaluator
        Errors
    build-depends:
        base >=4.11 && <4.12,
        parsec -any,
        array -any,
        mtl -any
